tests/Fixtures/Torture/Bad/generic_void.g
// EXPECT G007
import LibGata; import Collections;
kernel { entry func Main() { let List[void] a; } }
